# django_comp

./: Dockerfile  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml
.docker/: entrypoint.sh
.mysql-data/db/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
.mysql-data/db/#innodb_redo/: #ib_redo10  #ib_redo9
.mysql-data/db/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
.mysql-data/db/django_db/: auth_group.ibd  auth_group_permissions.ibd  auth_permission.ibd  auth_user.ibd  auth_user_groups.ibd  auth_user_user_permissions.ibd  django_admin_log.ibd  django_content_type.ibd  django_migrations.ibd  django_session.ibd
.mysql-data/db/mysql/: general_log_213.sdi  slow_log_214.sdi
.mysql-data/db/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  (+93 more)
composeexample/: settings.py
data/db/: postmaster.pid
django_compose/: asgi.py  settings.py  urls.py  wsgi.py
djangocompose/: asgi.py  settings.py  urls.py  wsgi.py
(+8 files in other folders)
