[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Leandro Freitas", email = "leandro.freitas@enervie-gruppe.de"},
]
dependencies = [
    "django>=4.1.1",
    "mysqlclient>=2.1.1",
    "djangorestframework>=3.14.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
